--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
-      "ext-http": "*"
+        "laravel/tinker": "^2.5"
+     
     },
     "require-dev": {
         "facade/ignition": "^2.5",
